--- a/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_more_details.xml
+++ b/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_more_details.xml
@@ -19,7 +19,7 @@
             android:singleLine="true"
             android:text="ВРЕМЕННОЙ ДИАПАЗОН"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:singleLine="true"
             android:text="Начало измерений"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -47,7 +47,7 @@
             android:singleLine="true"
             android:text="Конец измерений"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -61,7 +61,7 @@
             android:singleLine="true"
             android:text="Кол-во измерений"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -74,7 +74,7 @@
             android:fontFamily="sans-serif-smallcaps"
             android:singleLine="true"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -87,7 +87,7 @@
             android:fontFamily="sans-serif-smallcaps"
             android:singleLine="true"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -100,7 +100,7 @@
             android:fontFamily="sans-serif-smallcaps"
             android:singleLine="true"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -114,7 +114,7 @@
             android:singleLine="true"
             android:text="УЛИЧНАЯ ТЕМПЕРАТУРА"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
         <TextView
@@ -128,7 +128,7 @@
             android:singleLine="true"
             android:text="Средняя величина"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -141,7 +141,7 @@
             android:fontFamily="sans-serif-smallcaps"
             android:singleLine="true"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
     <TextView
@@ -154,7 +154,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -167,7 +167,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
         <TextView
@@ -181,7 +181,7 @@
             android:singleLine="true"
             android:text="Максим. величина"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
     <TextView
@@ -195,7 +195,7 @@
         android:singleLine="true"
         android:text="Миним. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -209,7 +209,7 @@
         android:singleLine="true"
         android:text="ДОМАШНЯЯ ТЕМПЕРАТУРА"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:textStyle="bold" />
 
     <TextView
@@ -223,7 +223,7 @@
         android:singleLine="true"
         android:text="Средняя величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -236,7 +236,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -249,7 +249,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -262,7 +262,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -276,7 +276,7 @@
         android:singleLine="true"
         android:text="Максим. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -290,7 +290,7 @@
         android:singleLine="true"
         android:text="Миним. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -304,7 +304,7 @@
         android:singleLine="true"
         android:text="УЛИЧНАЯ ВЛАЖНОСТЬ"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:textStyle="bold" />
 
         <TextView
@@ -318,7 +318,7 @@
             android:singleLine="true"
             android:text="Средняя величина"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
     <TextView
@@ -331,7 +331,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -344,7 +344,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -357,7 +357,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -371,7 +371,7 @@
         android:singleLine="true"
         android:text="Максим. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -385,7 +385,7 @@
         android:singleLine="true"
         android:text="Миним. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -399,7 +399,7 @@
         android:singleLine="true"
         android:text="ДОМАШНЯЯ ВЛАЖНОСТЬ"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:textStyle="bold" />
 
     <TextView
@@ -413,7 +413,7 @@
         android:singleLine="true"
         android:text="Средняя величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -426,7 +426,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -439,7 +439,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -452,7 +452,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -466,7 +466,7 @@
         android:singleLine="true"
         android:text="Максим. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -480,7 +480,7 @@
         android:singleLine="true"
         android:text="Миним. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -494,7 +494,7 @@
         android:singleLine="true"
         android:text="ОСАДКИ"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:textStyle="bold" />
 
     <TextView
@@ -508,7 +508,7 @@
         android:singleLine="true"
         android:text="Средняя величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -521,7 +521,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -534,7 +534,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -547,7 +547,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -561,7 +561,7 @@
         android:singleLine="true"
         android:text="Максим. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -575,7 +575,7 @@
         android:singleLine="true"
         android:text="Миним. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -589,7 +589,7 @@
         android:singleLine="true"
         android:text="СКОРОСТЬ ВЕТРА"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:textStyle="bold" />
 
     <TextView
@@ -603,7 +603,7 @@
         android:singleLine="true"
         android:text="Средняя величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -616,7 +616,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -629,7 +629,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -642,7 +642,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -656,7 +656,7 @@
         android:singleLine="true"
         android:text="Максим. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -670,7 +670,7 @@
         android:singleLine="true"
         android:text="Миним. величина"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
         <TextView
@@ -684,7 +684,7 @@
             android:singleLine="true"
             android:text="НАПРЯЖЕНИЕ ПИТАНИЯ"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
         <TextView
@@ -698,7 +698,7 @@
             android:singleLine="true"
             android:text="Максим. величина"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
     <TextView
@@ -711,7 +711,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <TextView
@@ -724,7 +724,7 @@
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:textColor="@color/purple_500"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
         <TextView
@@ -738,7 +738,7 @@
             android:singleLine="true"
             android:text="Миним. величина"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
@@ -752,7 +752,7 @@
             android:singleLine="true"
             android:text="НАПРАВЛЕНИЕ ВЕТРА"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
         <com.github.mikephil.charting.charts.PieChart
