--- a/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_charts.xml
+++ b/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_charts.xml
@@ -3,7 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="720dp"
     android:tag=".ui.charts.ChartsFragment">
 
     <RelativeLayout
@@ -14,7 +14,7 @@
         <TableLayout
             android:id="@+id/table"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="300dp"
             android:layout_marginTop="0dp">
         </TableLayout>
 
@@ -200,6 +200,7 @@
             android:layout_height="300dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
+            android:foregroundTint="#763FF1"
             tools:ignore="MissingConstraints" />
 
 
