--- a/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,12 @@
     android:paddingBottom="16dp"
     tools:context=".ui.home.HomeFragment">
 
+    <TableLayout
+        android:id="@+id/table"
+        android:layout_width="360dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="530dp"></TableLayout>
+
     <TextView
         android:id="@+id/STREET_TEMP"
         android:layout_width="wrap_content"
@@ -353,8 +359,9 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="ПОГОДА СЕЙЧАС"
+        android:text="ПОГОДА ЗА ПОСЛЕДНИЕ СУТКИ на улице"
         android:textColor="@color/white"
+        android:textSize="14dp"
         android:textStyle="bold" />
 
     <TextView
@@ -393,9 +400,9 @@
 
     <View
         android:id="@+id/divider17"
-        android:layout_width="250dp"
+        android:layout_width="85dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="123dp"
+        android:layout_marginLeft="288dp"
         android:layout_marginTop="510dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -534,6 +541,14 @@
         android:layout_marginTop="260dp"
         android:src="@drawable/def" />
 
+    <ImageView
+        android:id="@+id/time_error"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="330dp"
+        android:layout_marginTop="440dp"
+        android:src="@drawable/time_error" />
+
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
@@ -566,6 +581,33 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="530dp" />
+
+    <View
+        android:id="@+id/divider19"
+        android:layout_width="2dp"
+        android:layout_height="199dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="530dp"
+        android:background="@color/purple_700"
+        android:backgroundTintMode="add" />
+
+    <View
+        android:id="@+id/divider20"
+        android:layout_width="2dp"
+        android:layout_height="199dp"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="530dp"
+        android:background="@color/purple_700"
+        android:backgroundTintMode="add" />
+
+    <View
+        android:id="@+id/divider21"
+        android:layout_width="2dp"
+        android:layout_height="199dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="530dp"
+        android:background="@color/purple_700"
+        android:backgroundTintMode="add" />
 
 
 </RelativeLayout>
